Fix width of text to improve readability on mobile devices

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -50,11 +50,16 @@ h1 {
     font-weight: 200;
     margin: 0;
     text-align: center;
+    max-width: 90vw;
+}
+h2 {
+    max-width: 90vw;
 }
 
 p {
     font-size: 1.2rem;
-    max-width: 70ch;
+    width: 70ch;
+    max-width: 90vw;
 
     strong {
         font-weight: 800;
@@ -65,6 +70,7 @@ p {
     font-size: 2em;
     color: var(--accent);
     margin: 0;
+    text-align: center;
 }
 
 .languages {
